--- a/clipdown/2022/webview/clipdownplus/resource/css/common copy.css
+++ b/clipdown/2022/webview/clipdownplus/resource/css/common copy.css
@@ -1,20 +1,17 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 
- 
 /*!
- * 2022-11-21 update
- * 공통 기본 레이아웃, 컴포넌트 스타일
- * Copyright ⓒ J’SFUTURE corp. All Rights Reserved.
+* 2022-02-28
+* 클립다운 플러스 - Web 안내페이지 / WebView 안내창
+* Copyright ⓒ J’SFUTURE corp. All Rights Reserved.
 */
 
-
 /* rest */
-*, ::after, ::before{box-sizing: border-box;}
 :root{font-size:62.5%; /* font-size:10px; */}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -34,7 +31,7 @@ audio, canvas, progress, video {display: inline-block; vertical-align: baseline;
 div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,button,pre,a{font-family:'SCDream', 'Noto Sans KR', 'Poppins', Lato, Helvetica, sans-serif; font-size:1.4rem; font-size:14px; line-height: 1.4; color:#333;}
 html, body{width: 100%; height: 100%;}
 html{-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
-body{overflow-x: hidden; overflow-y: auto;-ms-overflow-style:none;}
+body{overflow-x: hidden; overflow-y: auto;-ms-overflow-style:scrollbar;}
 textarea{width:100%;}
 select, input, img, button{vertical-align:middle;}
 ul, ol{list-style-type:none; }
@@ -42,7 +39,7 @@ legend, hr, caption span, .hide{position:absolute; left:-3000%;}
 em, address{font-style:normal;}
 table{border-collapse:collapse; border-spacing:0; width:100%;}
 a{background-color: transparent; color:#666; text-decoration:none; -webkit-text-decoration-skip:object;}
-a:focus, a:hover{outline: 0; text-decoration:underline;}
+a:focus, a:hover{outline: 0; text-decoration:underline; color:#e21d19}
 fieldset, iframe, img, button{border:0;}
 textarea,input[type="file"],input[type="password"],input[type="text"]{text-indent:4px; border:1px solid #ddd;}
 select{padding:0 0 0 5px; height:28px; border:1px solid #e5e5e5;}
@@ -57,7 +54,6 @@ input[type="file"]{width:100%;}
 input[type="radio"]{vertical-align:text-bottom;}
 input::placeholder{font-size:14px; color:#666;}
 img{max-width:100%; width:100%; height:auto; -webkit-perspective: 1;} /* 모바일에서 이미지 선명도 - 노출되는 이미지 사이즈 2배크기의 원본이미지 적용 <img src='img.png' alt='' style='width:원본사이즈 1/2 사이즈 기재' />   */
-svg{max-width: 100%; width: 100%; user-select : none;}
 .clear{zoom:1; clear:both;}
 .clear:after{content:" "; display:block; clear:both;}
 .skip{position:absolute; left:0; top:-100px; z-index:1000; width:100%; height:60px; line-height:60px; text-align:center; font-size:20px; color:#fff; transition:all 0.5s; background:#666;}
