--- a/misc/ad/clipdownplus_popup_join_auth/resource/css/style.css
+++ b/misc/ad/clipdownplus_popup_join_auth/resource/css/style.css
@@ -87,4 +87,36 @@
 .content_bottom .checkbox span::after{ content: ''; display: none; position: absolute; top:1px; left: 5px; width: 4px; height: 8px; border: solid #666; border-width:0 2px 2px 0; transform: rotate(45deg); -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg);}
 .content_bottom .checkbox input:checked~span:after{display: inline-block; margin-right: 15px; margin-bottom: 5px;}
 
-
+/* clipdonwPLUS+ Webview 가입팝업 - 결제완료 */
+.pop_win .header .sub_text{ font-size:15px; font-weight: 500; color: #333; letter-spacing: -1px; vertical-align: bottom;}
+.pop_win .contents_header{margin: 0 20px; padding: 20px 0 10px 0;}
+.pop_win .contents_header .header_title{font-size: 16px; font-size: 1.6rem; font-weight: 500; color: #333;}
+.pop_win .contents_header .header_title .sub_text_s{font-size: 12px;}
+.pop_win .container{position:relative; width: 100%; height: auto; margin: 0 auto;}
+.pop_win .tit_area{width: 100%; margin-bottom: 20px;}
+.pop_win .content_item .content_message{display: flex; justify-content: center; align-items: center; position: relative; min-height: 160px;}
+.pop_win .content_item .content_message{font-size: 14px; color:#666;}
+.pop_win .content_item .content_message .text_point{font-weight: 500; color:#333;}
+.pop_win .content_item .content_message .content_title{font-size: 18px; letter-spacing: -1px;}
+.pop_win .contents .content_item.item_guide{background: #f7f7f7; text-align: center; padding: 0 20px;}
+.pop_win .contents .content_item.item_guide .guide_info{border-top:1px dashed #eee; padding: 20px 0;}
+.pop_win .contents .content_item.item_guide .guide_info p{font-size: 12px; font-size: 1.2rem;}
+.pop_win .content_item .text_point{font-weight: 600;}
+.pop_win .box_btn{position: relative; width: 100%; text-align: center; margin: 20px 0;}
+.pop_win .btn_style{display: inline-block; position: relative; overflow: hidden; padding: 6px 28px; font-size: 15px; background: #666; color: #fff; border: 1px solid #666; border-radius: 3px;text-decoration: none;}
+.pop_win .btn_style:hover{background: #333; border: 1px solid #333; text-decoration: none;}
+.pop_win .service_error	{width: 100%; overflow:hidden; margin: 0; padding: 0;}
+.pop_win .service_error .error01{border-bottom: 1px dotted #ddd; padding-bottom:7px; margin-bottom:8px;}
+.pop_win .service_error dl dt{margin-bottom:6px;}
+.pop_win .service_error dl dt span{position: relative; padding: 0 10px; font-weight: 600;}
+.pop_win .service_error dl dt span:before{ content: ''; position: absolute; top: 50%; left: 0; width: 3px; height: 3px; background: #c0c0c0; border-radius:50% ; -webkit-border-radius:50% ; -moz-border-radius:50% ; -ms-border-radius:50% ; -o-border-radius:50% ; margin-top: -2px; }
+.pop_win .service_error dl dd	{background:url(../img/error_arrow.gif) no-repeat 13px 2px; padding-left:28px; color:#374873; line-height:20px;}
+.pop_win.webview_popup_join .contents{position: relative; margin: 0 20px; padding: 20px 20px; border: 1px solid #ddd; margin-bottom: 20px;} 
+.pop_win.webview_popup_join .sub-header {padding: 10px 0 0 0;}
+.pop_win.webview_popup_join .sub-header .sub_title{font-size: 16px; font-size: 1.6rem; font-weight: 500; color: #3b393a;}
+.pop_win.webview_popup_join .content-item{margin: 10px 0; margin-bottom: 20px;}
+.pop_win.webview_popup_join .itme_clipdown{position: relative; width: 100%; text-align: center; background: #f7f7f7;  padding: 20px 0;}
+.pop_win.webview_popup_join .itme_clipdown .icon_clipdown{display: inline-block; height: 38px; vertical-align: middle;}
+.pop_win.webview_popup_join .itme_clipdown .content_text{display: inline-block; font-size: 13px; font-size: 1.3rem; text-align: left; vertical-align: middle; padding-left: 10px;}
+.pop_win .item_guide .guide_list{padding-top: 15px;}
+.pop_win .item_guide .guide_list dt, .webview_popup_join .item_guide .guide_list dd {font-size: 12px; font-size: 1.2rem;}
