--- a/clipdown/2022/webview/common_resource/css/common.css
+++ b/clipdown/2022/webview/common_resource/css/common.css
@@ -184,6 +184,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
     touch-action: manipulation; 
     -webkit-tap-highlight-color: transparent; 
     white-space: nowrap;
+	cursor: pointer;
 }
 .btn.focus, .btn:focus, .btn:hover{color:#fff; text-decoration: none;}
 a.btn:hover{text-decoration: none;}
