--- a/misc/ad/clipdownplus_popup/resource/css/style_ex.css
+++ b/misc/ad/clipdownplus_popup/resource/css/style_ex.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-
+ 
 /* Custom Style */
 .wrap{position: relative; width: 100%; height: 100%;}
 
@@ -87,23 +87,18 @@
 .content_bottom .checkbox span::after{ content: ''; display: none; position: absolute; top:1px; left: 5px; width: 4px; height: 8px; border: solid #666; border-width:0 2px 2px 0; transform: rotate(45deg); -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg);}
 .content_bottom .checkbox input:checked~span:after{display: inline-block; margin-right: 15px; margin-bottom: 5px;}
 
-
 /* clipdonwPLUS+ Webview 가입팝업 - 결제완료 */
-.pop_wrap{position:relative; width:100%; height:auto; margin: 0 auto;}
-.pop_win .header{width: 100%; height: 50px; background: #eaeaea;}
-.pop_win .header h1.logo{padding: 8px 20px;}
 .pop_win .header .sub_text{ font-size:15px; font-weight: 500; color: #333; letter-spacing: -1px; vertical-align: bottom;}
 .pop_win .contents_header{margin: 0 20px; padding: 20px 0 10px 0;}
 .pop_win .contents_header .header_title{font-size: 16px; font-size: 1.6rem; font-weight: 500; color: #333;}
 .pop_win .contents_header .header_title .sub_text_s{font-size: 12px;}
 .pop_win .container{position:relative; width: 100%; height: auto; margin: 0 auto;}
 .pop_win .tit_area{width: 100%; margin-bottom: 20px;}
-.pop_win .contents{position: relative; background:#fff; border: 1px solid #eaeaea; margin: 0 20px;}
 .pop_win .content_item .content_message{display: flex; justify-content: center; align-items: center; position: relative; min-height: 160px;}
 .pop_win .content_item .content_message{font-size: 14px; color:#666;}
 .pop_win .content_item .content_message .text_point{font-weight: 500; color:#333;}
 .pop_win .content_item .content_message .content_title{font-size: 18px; letter-spacing: -1px;}
-.pop_win .contents .content_item.item_guide{text-align: center; padding: 0 20px;}
+.pop_win .contents .content_item.item_guide{background: #f7f7f7; text-align: center; padding: 0 20px;}
 .pop_win .contents .content_item.item_guide .guide_info{border-top:1px dashed #eee; padding: 20px 0;}
 .pop_win .contents .content_item.item_guide .guide_info p{font-size: 12px; font-size: 1.2rem;}
 .pop_win .content_item .text_point{font-weight: 600;}
@@ -116,28 +111,23 @@
 .pop_win .service_error dl dt span{position: relative; padding: 0 10px; font-weight: 600;}
 .pop_win .service_error dl dt span:before{ content: ''; position: absolute; top: 50%; left: 0; width: 3px; height: 3px; background: #c0c0c0; border-radius:50% ; -webkit-border-radius:50% ; -moz-border-radius:50% ; -ms-border-radius:50% ; -o-border-radius:50% ; margin-top: -2px; }
 .pop_win .service_error dl dd	{background:url(../img/error_arrow.gif) no-repeat 13px 2px; padding-left:28px; color:#374873; line-height:20px;}
-.pop_win.webview_join_body{background: #fff;}
-.pop_win.webview_popup_join .inner{position: relative; margin: 0 auto; max-width: 504px; max-height: 786px;}
-.pop_win.webview_popup_join .contents{position: relative; padding: 20px 20px; border: 1px solid #ddd; margin-bottom: 20px;}
-.pop_win.webview_popup_join .header{position: relative; height: 36px; padding: 6px 20px; background: #f8f8f8;}
-.pop_win.webview_popup_join .logo_brand{display:inline-block; position: relative; width: 23%; top:3px;}
+.pop_win.webview_popup_join .contents{position: relative; margin: 0 20px; padding: 20px 20px; border: 1px solid #ddd; margin-bottom: 20px;} 
 .pop_win.webview_popup_join .sub-header {padding: 10px 0 0 0;}
 .pop_win.webview_popup_join .sub-header .sub_title{font-size: 16px; font-size: 1.6rem; font-weight: 500; color: #3b393a;}
 .pop_win.webview_popup_join .content-item{margin: 10px 0; margin-bottom: 20px;}
 .pop_win.webview_popup_join .itme_clipdown{position: relative; width: 100%; text-align: center; background: #f7f7f7;  padding: 20px 0;}
-.pop_win.webview_popup_join .itme_clipdown .icon_clipdown{display: inline-block; vertical-align: middle;}
+.pop_win.webview_popup_join .itme_clipdown .icon_clipdown{display: inline-block; height: 38px; vertical-align: middle;}
 .pop_win.webview_popup_join .itme_clipdown .content_text{display: inline-block; font-size: 13px; font-size: 1.3rem; text-align: left; vertical-align: middle; padding-left: 10px;}
-.pop_win.webview_popup_join .item_guide .guide_list{padding-top: 15px;}
-.pop_win.webview_popup_join .item_guide .guide_list dt, .webview_popup_join .item_guide .guide_list dd {font-size: 12px; font-size: 1.2rem;}
-.pop_win.webview_popup_join .content_item.item_guide{background: #f7f7f7;}
-
+.pop_win .item_guide .guide_list{padding-top: 15px;}
+.pop_win .item_guide .guide_list dt, .webview_popup_join .item_guide .guide_list dd {font-size: 12px; font-size: 1.2rem;}
 
 /* 
-    * 2022-12-21 
-    * webview 휴대폰인증 광고 가입 팝업 스타일 재 작업
+    * 2022-12-20 
+    * webview 휴대폰인증 광고 가입 팝업스타일 재작업
     * 메인 이미지 변경
     * checkbox 스타일 변경
-    * 약관 리스트 스타일 변경    
+    * 약관 리스트 스타일 변경
+    
 */
 .cb{display: inline-block; position: relative; padding-left: 25px; font-size: 13px; font-size: 1.3rem; font-weight: 500; line-height: 1.7; cursor: pointer; margin: 3px 0;}
 .cb input{position: absolute; z-index: -1; top:2px; left: 0; width:16px; height:16px; margin: 0; opacity: 0; filter: alpha(opacity = 0);}
@@ -145,29 +135,61 @@
 .cb span:after{content: ''; position: absolute; top: 1px; left: 5px; width: 5px; height: 10px; border: solid #c9caca; border-width: 0 2px 2px 0; transform: rotate(45deg);}
 .cb input:checked~span{border: 1px solid #e21d19; background: #e21d19;}
 .cb input:checked~span:after{border: solid #fff; border-width: 0 2px 2px 0;}
+.style_form .content-item{margin: 20px 0;}
+.style_form .form-control{border: 3px solid #bababa;}
 .style_form .form-control::placeholder{font-weight: 400; color:#333;}
-.style_form .form-info-box .row-contents {position: relative;overflow: hidden;margin-left: -5px;margin-right: -5px;}
-.style_form .form-info-box .row-contents [class*="col-"]{position: relative;float: left;min-height: 1px;padding-left: 5px;padding-right: 5px;}
+.style_form .form-control:focus{outline: 3px solid #e21d19 !important; outline-offset: -3px;}
+.style_form .item_img_box{background-color: #f8f8f8;}
 .style_form .agree_style{margin-top: 20px; margin-bottom: 20px;}
-.style_form .sub-header .sub_title{font-size: 15px; font-size: 1.5rem;}
-.style_form .form-control{border: 2px solid #333;}
-.style_form .form-group .btn_apply{display: inline-block; position: relative; width: 100%; height: 48px; min-width: 68px; background: #fff; color: #333; border: 2px solid #333; font-size: 1.4rem; font-weight: 500; line-height: 2; text-align: center; padding: 10px 10px; cursor: pointer; text-decoration: none;}
-.style_form .form-group .btn_apply:hover, .style01 .form-group .btn_apply.focus{background: #fff; color: #e21d19; border: 2px solid #e21d19;}
-.style_form .agree_head .cb{font-size: 15px; font-size: 1.5rem; line-height: 1.6;}
-.style_form .agree_head .cb .help-text{font-size: 15px; font-size: 1.5rem; font-weight: 400;}
-.style_form .agree_head{padding: 5px 0; border-bottom: 1px solid #ddd;}
-.style_form .agree_list{position: relative; width: 100%; overflow: hidden; padding-top: 10px;}
-.style_form .agree_list.half .list_item{position: relative; width: 50%; float: left;}
-.style_form .agree_list.half .list_item a{position: relative; font-size: 11px; font-size: 1.1rem; font-weight: 400;}
-.style_form .btn_full_point{padding: 15px 20px;}
-/* 스타일 01 */
-.style01 svg{height: 100%;}
-.style01 .item_title{padding: 40px 20px 0;}
-.style01 .item_title h2{font-size: 24px; font-size: 2.4rem; font-weight:600; line-height: 1.4; text-align: center;}
-.style01 .item_top{padding: 20px 20px;}
-.style01 .img_banner{display: flex; align-items: center; justify-content: center; position: relative; width: 100%; background: #f8f8f8; padding: 15px 0;}
-.style01 .img_banner .item_img{position: relative; width: 13%; max-width: 48px;}
-.style01 .img_banner .item_text{font-size: 13px; font-size: 1.3rem; line-height: 1.5; padding: 0 15px;}
+.style_form .agree_style .agree-item .required{border: 1px solid #efefef; padding: 3px 10px;}
+.style_form .agree_style .agree-item .required:focus{border: 1px solid #e21d19;}
+.style_form .agree_style .agree_policy .agree-item_2depth{border: 1px solid #efefef; margin-top: -2px; margin-bottom:0; padding: 5px 0;}
+.style_form .agree_style .agree_policy .agree-item_2depth .agree-head_2depth{background: #fff; border: 0; padding: 2px 10px; margin: 0;}
+.style_form .agree_style .agree_policy .agree-item_2depth .agree-head_2depth .check_form-group{overflow: unset;}
+.style_form .agree_style .check_form-group .terms_link{margin: 0;}
+.style_form .agree_style .check_form-group .terms_link{margin: 0;} 
+.style_form .agree_style .agree_policy .agree-head_2depth .cb{color: #bababa; font-size: 11px; font-size: 1.1rem; font-weight: 400; line-height: 2; margin: 0;}
+.style_form .agree_style .check_form-group .terms_link{margin: 0;} 
+.style_form .agree_style .agree_policy .agree-head_2depth .help-text{font-size: 10px; font-size: 1rem; color: #9fa0a0;}
+
+/* Style 01 */
+.style_01 .item_top{position: relative; padding: 20px 20px 10px 20px;}
+.style_01 .item_top .item_img{position: relative; width: 100%; text-align: center;}
+.style_01 .item_top .item_img svg{width: 88px;}
+.style_01 .item_top .item_img .yt_color{fill: #ddd;}
+.style_01 .item_top .item_img .yt_color.focus{fill: #FD0214;}
+.style_01 .item_top .item_text{font-size: 18px; font-size: 1.8rem; line-height: 1.6; text-align: center;}
+
+/* Style 02 */
+.style_02 svg{height: 100%;}
+.style_02 .item_top{display: flex; align-items: center; justify-content: center; position: relative; width: 100%; background: #f8f8f8; padding: 40px 20px;}
+.style_02 .item_top .item_img{position: relative; width: 15%; max-width: 72px;}
+.style_02 .item_top .item_text{font-size: 18px; font-size: 1.8rem; line-height: 1.6; padding: 0 15px;}
+
+/* Style 03 */
+.style_03 svg{height: 100%;}
+.style_03 .item_title{padding: 40px 20px 0;}
+.style_03 .item_title h2{font-size: 24px; font-size: 2.4rem; font-weight:600; line-height: 1.4; text-align: center;}
+.style_03 .item_top{padding: 20px 20px;}
+.style_03 .img_banner{display: flex; align-items: center; justify-content: center; position: relative; width: 100%; background: #f8f8f8; padding: 15px 0;}
+.style_03 .img_banner .item_img{position: relative; width: 13%; max-width: 48px;}
+.style_03 .img_banner .item_text{font-size: 13px; font-size: 1.3rem; line-height: 1.5; padding: 0 15px;}
+.style_03 .style_form .content-item{margin: 10px 0 0;}
+.style_03 .form-info-box .row-contents {position: relative;overflow: hidden;margin-left: -5px;margin-right: -5px;}
+.style_03 .form-info-box .row-contents [class*="col-"]{position: relative;float: left;min-height: 1px;padding-left: 5px;padding-right: 5px;}
+
+.style_03 .sub-header .sub_title{font-size: 15px; font-size: 1.5rem;}
+.style_03 .style_form .form-control{border: 2px solid #333;}
+.style_03 .style_form .form-control:focus{outline: 2px solid #e21d19 !important; outline-offset: -2px;}
+.style_03 .form-group .btn_apply{display: inline-block; position: relative; width: 100%; height: 48px; min-width: 68px; background: #fff; color: #333; border: 2px solid #333; font-size: 1.4rem; font-weight: 500; line-height: 2; text-align: center; padding: 10px 10px; cursor: pointer; text-decoration: none;}
+.style_03 .form-group .btn_apply:hover, .style_03 .form-group .btn_apply.focus{background: #fff; color: #e21d19; border: 2px solid #e21d19;}
 
 
+.style_03 .agree_head .cb{font-size: 15px; font-size: 1.5rem; line-height: 1.6;}
+.style_03 .agree_head .cb .help-text{font-size: 15px; font-size: 1.5rem; font-weight: 400;}
 
+.style_03 .agree_head{padding: 5px 0; border-bottom: 1px solid #ddd;}
+.style_03 .agree_list{position: relative; width: 100%; overflow: hidden; padding-top: 10px;}
+.style_03 .agree_list.half .list_item{position: relative; width: 50%; float: left;}
+.style_03 .agree_list.half .list_item a{position: relative; font-size: 11px; font-size: 1.1rem; font-weight: 400;}
+.style_03 .btn_full_point{padding: 15px 20px;}
