--- a/misc/ad/clipdownplus_popup/resource/css/style.css
+++ b/misc/ad/clipdownplus_popup/resource/css/style.css
@@ -152,7 +152,7 @@
 .style_form .sub-header .sub_title{font-size: 15px; font-size: 1.5rem;}
 .style_form .form-control{border: 2px solid #333;}
 .style_form .form-group .btn_apply{display: inline-block; position: relative; width: 100%; height: 48px; min-width: 68px; background: #fff; color: #333; border: 2px solid #333; font-size: 1.4rem; font-weight: 500; line-height: 2; text-align: center; padding: 10px 10px; cursor: pointer; text-decoration: none;}
-.style_form .form-group .btn_apply:hover, .style01 .form-group .btn_apply.focus{background: #fff; color: #e21d19; border: 2px solid #e21d19;}
+.style_form .form-group .btn_apply:hover, .style01 .form-group .btn_apply.focus{background: #fff; color: #e21d19; border: 2px solid #e21d19; outline:0;}
 .style_form .agree_head .cb{font-size: 15px; font-size: 1.5rem; line-height: 1.6;}
 .style_form .agree_head .cb .help-text{font-size: 15px; font-size: 1.5rem; font-weight: 400;}
 .style_form .agree_head{padding: 5px 0; border-bottom: 1px solid #ddd;}
