--- a/misc/ad/clipdownplus_popup/resource/css/style.css
+++ b/misc/ad/clipdownplus_popup/resource/css/style.css
@@ -168,6 +168,9 @@
 .style01 .img_banner{display: flex; align-items: center; justify-content: center; position: relative; width: 100%; background: #f8f8f8; padding: 15px 0;}
 .style01 .img_banner .item_img{position: relative; width: 13%; max-width: 48px;}
 .style01 .img_banner .item_text{font-size: 13px; font-size: 1.3rem; line-height: 1.5; padding: 0 15px;}
+.style01 .help_box{text-align: center; padding: 10px 0; }
+.style01 .help_box.help-text{font-size: 11px; font-size: 1.1rem;}
+
 
 
 
