--- a/clipdown/2023/webview/cashmate/resource/css/common.css
+++ b/clipdown/2023/webview/cashmate/resource/css/common.css
@@ -49,7 +49,9 @@ ol, ul, li{list-style-type:none;}
 legend, hr, caption span {position:absolute; left:-3000%;}
 em, address{font-style:normal;}
 table{border-collapse:collapse; border-spacing:0;}
+table caption, legend{top:-9999px; text-indent: -9999px; font-size: 0; line-height: 0;}
 a{background-color: transparent; color:#666; text-decoration:none; -webkit-text-decoration-skip:object;}
+a:hover{color: #333;}
 fieldset, iframe, img, button{border:0;}
 textarea,input[type="file"],input[type="password"],input[type="text"]{text-indent:4px; border:1px solid #ddd;}
 select{padding:0 0 0 5px; height:28px; border:1px solid #e5e5e5;}
@@ -59,10 +61,12 @@ select:focus, textarea:focus, input[type="password"]:focus, input[type="file"]:f
 textarea[readonly="readonly"],button[readonly="readonly"],select[readonly="readonly"],input[readonly="readonly"], 
 textarea[disabled="disabled"],button[disabled="disabled"],select[disabled="disabled"],input[disabled="disabled"]{background:#f5f5f5; border-color:#d4d4d4;}
 input[type=text]::-ms-clear {display: none;}
-input[type="password"],input[type="file"],input[type="text"]{height:28px; line-height:28px;}
+input[type="password"],input[type="file"],input[type="text"]{}
 input[type="file"]{width:100%;}
 input[type="radio"]{vertical-align:text-bottom;}
-input::placeholder{font-size:14px; color:#bbb;}
+input::placeholder{font-size:11px; font-size:1.1rem; color:#aaa;}
+input:-webkit-autofill { -webkit-box-shadow: 0 0 0 30px transparent inset ; -webkit-text-fill-color: #666; }
+input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active { transition: background-color 5000s ease-in-out 0s; }
 img{max-width:100%; width:100%; height:auto;} /* 모바일에서 이미지 선명도 - 노출되는 이미지 사이즈 2배크기의 원본이미지 적용 <img src='img.png' alt='' style='width:원본사이즈 1/2 사이즈 기재' />   */
 svg{max-width: 100%; width: 100%; user-select : none;}
 :focus{outline: 0;}
@@ -71,7 +75,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 /* Common */
 .text-block{display:block;}
 .ellipsis{overflow:hidden; white-space:nowrap; -o-text-overflow:ellipsis; text-overflow:ellipsis;}
-.ellipsis-block{display: block; display: -webkit-box; overflow:hidden; height: 2.4em; line-height: 1.2em; -o-text-overflow:ellipsis; text-overflow:ellipsis; -webkit-line-clamp: 2; -webkit-box-orient: vertical; word-wrap: break-word;}
+.ellipsis-block{display: -webkit-box; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 2; -webkit-box-orient: vertical; line-height: 1.5; letter-spacing: -.3px;}
 .hide{display:none;}
 .hidden{position: absolute; left: 0; top: -9999px;}
 .clear{zoom:1; clear:both;}
@@ -198,7 +202,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
     white-space: nowrap;
 	cursor: pointer;
 }
-.btn.focus, .btn:focus, .btn:hover{color:#fff;}
+.btn.focus, .btn:focus, .btn:hover{outline: 0; box-shadow: none;}
 a.btn:hover{text-decoration: none;}
 a.disabled{pointer-events: none;}
 .link-text{
@@ -223,7 +227,7 @@ a.disabled{pointer-events: none;}
 .btn-circle{-moz-border-radius:50%; -webkit-border-radius: 50%; border-radius: 50%; min-width: 0; min-height: 0; width:36px; height:36px; padding: 0;}
 
 /* Color */
-.point-color, .point-text{color:#e31d19;}
+.point-color, .point-text{color:#e21d19;}
 .white-color{color:#fff;}
 .defualt-color{color:#333;}
 .info-color{color:#666;}
@@ -238,7 +242,7 @@ a.disabled{pointer-events: none;}
 .m-checkbox input, .m-radio input{position: absolute; z-index: -1; top:2px; left: 0; width:16px; height:16px; margin: 0; opacity: 0; filter: alpha(opacity = 0);}
 .m-checkbox span, .m-radio span{position: absolute; top: 2px; left: 0; width: 16px; height: 16px; border: 1px solid #c9caca; background: #fff;}
 .m-checkbox-disabled, .m-checkbox input[disabled]~span, .m-checkbox input:checked[disabled]~span, .m-radio-disabled, .m-radio input[disabled]~span, .m-radio input:checked[disabled]~span{opacity: .5; cursor: default; filter: alpha(opacity = 50);}
-.m-checkbox span:after, .m-radio span:after{display: none; position: absolute; content: '';}
+.m-checkbox span:after, .m-radio span:after{display: block; position: absolute; content: '';}
 .m-checkbox span:after{top: 1px; left: 5px; width: 5px; height: 10px; border: solid #3b393a; border-width: 0 2px 2px 0; transform: rotate(45deg);}
 .m-radio span{border-radius: 50% !important; -o-border-radius: 50% !important; -ms-border-radius: 50% !important;}
 .m-radio span:after{top: 4px; left: 4px; width: 6px; height: 6px; border-radius: 100% !important; background: #6e6e6e;}
@@ -251,6 +255,9 @@ a.disabled{pointer-events: none;}
 .radio_lg{font-size: 16px; font-size: 1.6rem;}
 .radio_lg span{top: 3px; width: 18px; height: 18px;}
 .radio_lg span:after{top: 4px; left: 4px; width: 8px; height: 8px;}
+
+
+
 
 
 
