--- a/clipdown/2023/webview/cashmate/view/download_section.html
+++ b/clipdown/2023/webview/cashmate/view/download_section.html
@@ -38,16 +38,16 @@
         .tooltip_reward .btn_tooltip .text_des{font-size: 13px; padding-right: 5px;}
         .tooltip_reward .btn_tooltip .icon_tooltip{position: relative;}
         .tooltip_reward .btn_tooltip .icon_tooltip svg{position: relative; width: 14px; height: 14px; vertical-align: top;}
-        .tooltip_reward .notice_tooltip{position: absolute; top:100%; left: 0; width: 286px; background: #fff; border: 1px solid #2C2F42;padding: 10px 10px; box-sizing: border-box; box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.35);}
-        .tooltip_reward .notice_tooltip .notice_header{position: relative; padding-bottom: 10px;}
+        .tooltip_reward .notice_tooltip{position: absolute; top:100%; left: 0; width: 260px; background: #fff; border: 1px solid #2C2F42;padding: 10px 10px; box-sizing: border-box; box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.15); z-index: 1000;}
+        .tooltip_reward .notice_tooltip .notice_header{position: relative; padding-bottom: 5px;}
         .tooltip_reward .notice_tooltip .notice_header strong{font-size: 12px;}
         .tooltip_reward .notice_tooltip .notice_list{padding: 0; margin: 0;}
-        .tooltip_reward .notice_tooltip .notice_list .item_notice{font-size: 12px; padding-bottom: 3px;}
+        .tooltip_reward .notice_tooltip .notice_list .item_notice{font-size: 11px; padding-bottom: 3px;}
 
         .btn_box_top{position: absolute; top: -1px; right: 0; }
         .btn_box_top .btn_popup_close{display: inline-block; vertical-align: middle; background:transparent; width: 14px; height: 14px; border:0; padding:0; cursor: pointer;}
         .btn_box_top .btn_popup_close:focus{outline:0;}
-        .btn_box_top .btn_popup_close .btn_close{display: inline-block; position: relative; overflow: hidden; width: 14px; height: 14px; opacity: 1;}
+        .btn_box_top .btn_popup_close .btn_close{display: inline-block; position: relative; overflow: hidden; width: 11px; height: 11px; opacity: 1;}
         .btn_box_top .btn_popup_close .icon-close:before, .btn_box_top .btn_popup_close .icon-close:after{content: ''; position: absolute; width: 100%; height:1px; top:50%; right:0; background:#9E9EA5;}
         .btn_box_top .btn_popup_close .icon-close:before{-webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);}
         .btn_box_top .btn_popup_close .icon-close:after{-webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg)}
