--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -110,6 +110,8 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .img_round{position: relative; overflow: hidden; border-radius: 50% !important;}
 
 
+
+
 /* Point Badge Style */
 .badge_point{display: inline-block; position: relative; min-width: 78px; height: 32px; background: #e21d19; color: #fff; text-align: center; line-height: 1.5; border-radius: 30px; padding: 4px 4px 4px 29px; -webkit-touch-callout: none; user-select: none;}
 .badge_point .icon_point{position: absolute; top:6px; left: 4px; width: 20px; height: 20px; background: #fff; color: #e21d19; font-weight: 700; line-height: 1; border-radius:50%; padding: 4px 4px;}
@@ -293,7 +295,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate.dark .form_control{background: #20222B; color: #fff; border: 1px solid #414450;}
 .webview_cashmate.dark .form_group .help-text{color: #9E9EA5;}
 .webview_cashmate.dark input:-webkit-autofill { -webkit-box-shadow: 0 0 0 30px #20222B inset ; -webkit-text-fill-color: #fff; }
-.webview_cashmate.dark .m-checkbox span, .m-radio span, .webview_cashmate.dark .m-radio>input:checked~span{background: #20222B;}
+.webview_cashmate.dark .m-checkbox span, .webview_cashmate.dark .m-radio span, .webview_cashmate.dark .m-radio>input:checked~span{background: #20222B;}
 .webview_cashmate.dark .btn_action{border-top: 1px solid #414450;}
 .webview_cashmate.dark .btn_default{background: #fff; border: 1px solid #333; color: #333;}
 .webview_cashmate.dark .btn_default{background: #272936; border: 1px solid #464756; color: #fff;}
