--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -14,6 +14,7 @@
 
 body{background: #202020;}
 .font_num{font-family: 'Poppins', Malgun Gothic, sans-serif; font-weight: 500;}
+.join_info{max-height: 340px;}
 
 /* 정리필요 스타일 */
 .join_info .btn_primary{display: block; background: #1a73e8; color: #fff; font-weight: 400; border-radius: 5px; padding: 8px 20px;} 
@@ -101,7 +102,6 @@ body{background: #202020;}
 .login_info .guide_text .text_link{font-size:10px; font-size:1rem;}
 
 /* webview 팝업 회원가입 안내 스타일 */
-.join_info{min-height: 320px;}
 .join_info .form_join{border: 0;}
 .join_info .form_join .terms_agree_list{margin: 30px 0;}
 .join_info .form_join .list_scroll{height: 100px; overflow-y: scroll; border: 1px solid #eee;}
@@ -117,7 +117,7 @@ body{background: #202020;}
 .guide_noti_box{background: #f7f7f7; padding: 10px 10px; margin-bottom: 10px;}
 .guide_noti_box .noti_text{}
 
-.webview_box .content_box .content_item.content_event{margin-top: 0;}
+.webview_box .content_box .content_item.content_event{border: 0; margin-top: 0;}
 .content_event .item_event{margin-bottom: 20px;}
 .content_event .item_event .event_date{display: block; font-size: 13px; font-size: 1.3rem; font-weight: 600; margin-bottom: 10px;}
 .content_event .item_event .card_event{display: flex; align-items: center; background: #fff; border: 1px solid #ddd; border-radius: 10px; padding: 20px 20px;} 
@@ -140,6 +140,7 @@ body{background: #202020;}
 .terms_agree_list{padding: 10px 0;}
 .terms_agree_list li.agree_item{position: relative; padding: 3px 0;}
 .terms_agree_list .checkbox{font-size: 13px; font-size: 1.3rem; line-height: initial; font-weight: 400; color: #20222B;}
+.list_box_border{border: 1px solid #eee; padding: 10px 10px;}
 
 /* checkbox style */
 .checkbox, .radio{display: inline-block; position: relative; padding-left: 20px; font-size: 13px; font-size: 1.3rem; font-weight: 400; line-height: 1.5; cursor: pointer;}
