--- a/clipdown/2023/webview/reward/view/download_section.html
+++ b/clipdown/2023/webview/reward/view/download_section.html
@@ -17,7 +17,7 @@
         .form-control:focus{outline: none; border-color: #333;}
         .empty-2{padding:0 2px;}
         .empty-5{padding:0 5px;}
-        .section_download{padding: 50px 0;} /* 영역 테스트 스타일 */
+        .section_download{padding: 50px 0;} /* 영역 테스트 스타일 , 개발 시 미적용 */
         .content_download{position: relative; width: 100%;}
         .btn_box{position: relative; margin: 10px 0;}
         .btn_download{background: #e31d19; border: 1px solid #e31d19; color:#fff; font-weight: 500; padding: 8px 20px;}
